# Blupuck

./: .gitignore  .gitmodules  CNAME  LICENSE  NOTICE  bt-controller-bridge-spec.md  index.html  readme.md
.github/workflows/: build-firmware.yml  deploy-webui.yml
assets/: index-DMW040CS.css  index-GRz3ydMV.js
docs/: pairing.md  protocol.md
firmware/: CMakeLists.txt  pico_sdk_import.cmake
firmware/include/: bt_host.h  btstack_config.h  gamepad_state.h  log.h  protocol.h  translate.h  tusb_config.h  usb_cdc.h  usb_hid.h  usb_webusb.h  usb_xinput.h  wake.h
firmware/lib/: .gitkeep
firmware/patches/: apply.sh  bluepad32-blupuck.patch
firmware/src/: bt_bonds.c  bt_host.c  log.c  main.c  mapping.c  translate.c  usb_cdc.c  usb_descriptors.c  usb_hid.c  usb_webusb.c  usb_xinput.c  wake.c
spec/: bt-controller-bridge-spec.md
webui/: package-lock.json  package.json  tsconfig.app.json
webui/src/: App.vue  style.css
webui/src/components/: ControllerCard.vue  DeviceConnector.vue  LiveInputView.vue  MirrorConfig.vue  ProfileManager.vue  RemapEditor.vue
webui/src/composables/: useControllers.ts  useProfiles.ts  useWebUsb.ts
webui/src/protocol/: messages.ts  types.ts
webui/src/views/: Dashboard.vue  Settings.vue
